fix: fonts letter-spacing

--- a/style.css
+++ b/style.css
@@ -184,8 +184,8 @@ h1, h2, h3, h4, h5, h6 {
 .serv_description {
     width: 940px;
     height: 57px;
-    font-size: 17px;
-    line-height: 31px;
+    font-size: 18px;
+    line-height: 30px;
     color: #767e9e;
     font-family: "Lato";
     font-weight: 300;
@@ -193,7 +193,7 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     bottom: 325px;
     left: 40px;
-    letter-spacing: 0.2px;
+    letter-spacing: -0.23px;
 }
 
 
@@ -294,7 +294,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .portfolio {
     width: 1020px;
-    height: 864px;
+    height: 863px;
     background-color: #2d303a;
     position: absolute;
     top: 1195px;
@@ -330,7 +330,7 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     top: 114px;
     left: 40px;
-    word-spacing: -0.08em;
+    letter-spacing: -0.23px;
 }
 
 /* Nav buttons */
@@ -369,7 +369,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 940px;
     height: 605px;
     position: absolute;
-    top: 196px;
+    top: 195px;
     left: 40px;
     grid-template-areas: "one two three four"
                          "five six seven eight"
@@ -437,7 +437,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .portfolio_bottom {
     position: absolute;
-    top: 864px;
+    top: 863px;
     width: 1020px;
     height: 6px;
     background-color: #323746;
@@ -449,7 +449,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .about {
     position: absolute;
-    top: 2065px;
+    top: 2064px;
     width: 1020px;
     height: 728px;
     background-color: #f2f2f2;
@@ -474,13 +474,13 @@ h1, h2, h3, h4, h5, h6 {
     left: 40px;
     width: 940px;
     height: 57px;
-    font-size: 17px;
+    font-size: 18px;
     line-height: 30px;
     color: #767e9e;
     font-family: "Lato";
     font-weight: 300;
     text-align: justify;
-    letter-spacing: 0.2px;
+    letter-spacing: -0.23px;
 }
 
 /* People Grid */
